Agregar ultimos cambios de la presentacion

--- a/conferences/pyconar_2020/sandbox.ipynb
+++ b/conferences/pyconar_2020/sandbox.ipynb
@@ -2,61 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/mnt/c/Users/pc/Downloads/takeout-20201018T151006Z-001/Takeout/Keep/'"
+    "path = '/mnt/c/Users/pc/Downloads/takeout-20201018T151006Z-001/Takeout/Keep/'\n",
+    "\n",
+    "import pathlib \n",
+    "\n",
+    "path = pathlib.Path(path)\n",
+    "\n",
+    "paths = [ p  for p in path.iterdir() if p.match(\"*.json\")] \n",
+    "\n",
+    "x,y = paths[0:2]\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "def read(x):\n",
+    "    with open(x) as f:\n",
+    "        return json.load(f)\n",
+    "tarjeta = read(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pathlib "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = pathlib.Path(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "paths = [ p  for p in path.iterdir() if p.match(\"*.json\")] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x,y = paths[0:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -75,22 +45,18 @@
        " 'userEditedTimestampUsec': 1520969946390000}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def read(x):\n",
-    "    with open(x) as f:\n",
-    "        return json.load(f)\n",
-    "X = read(x)\n",
-    "X"
+    "tarjeta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +72,7 @@
        " 'userEditedTimestampUsec': int}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +92,7 @@
        "{'description': str, 'source': str, 'title': str, 'url': str}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +119,7 @@
        "355"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +155,7 @@
        "datetime.datetime(2018, 3, 13, 16, 39, 6, 390000)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +201,7 @@
        "355"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +337,7 @@
        "         'Visualizaciones': 1})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,12 +350,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Edit  times"
+    "## Edit  times"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +373,7 @@
        "Counter({2016: 8, 2017: 69, 2018: 115, 2019: 98, 2020: 65})"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,12 +386,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Annotations"
+    "## Annotations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +403,7 @@
        "  'url': 'https://www.deepl.com/translator'}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,19 +704,67 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "class Post:\n",
+    "    \n",
+    "    def __init__(self, title, content, edit_time, metadata):\n",
+    "        self.title = title\n",
+    "        self.content = content\n",
+    "        self.edit_time = edit_time\n",
+    "        self.metadata = metadata\n",
+    "        \n",
+    "class Metadata:\n",
+    "    \n",
+    "    def __init__(self, *args):\n",
+    "        self._metadata\n",
+    "        \n",
+    "class Render:\n",
+    "    \n",
+    "    def __init__(self, posts, serializer):\n",
+    "        self.post = posts\n",
+    "        self.serializer = serializer"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    ".. title: How to make money\n",
+    ".. slug: how-to-make-money\n",
+    ".. date: 2012-09-15 19:52:05 UTC\n",
+    ".. tags:\n",
+    ".. link:\n",
+    ".. description:\n",
+    ".. type: text"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Post unico\n",
+    "- Post video\n",
+    "    youtube\n",
+    "    vimeo\n",
+    "    \n",
+    "- Post commando/ Agregacion / Desagregacion\n",
+    "    Bash\n",
+    "    git\n",
+    "    powershell\n",
+    "  \n",
+    "- Post Libreria\n",
+    "    \n",
+    "  \n",
+    "- Post privado\n",
+    "\n",
+    "\n",
+    "Loading\n",
+    "Saving"
+   ]
   },
   {
    "cell_type": "code",
